# libsharp

./: .gitignore  COMPILE  Makefile.am  Makefile.in  README.md  ar-lib  configure  configure.ac
fortran/: sharp.f90  test_sharp.f90
libsharp/: sharp.c  sharp.h  sharp_almhelpers.c  sharp_almhelpers.h  sharp_announce.c  sharp_complex_hacks.h  sharp_core.c  sharp_core.h  sharp_core_avx.c  sharp_core_avx2.c  sharp_core_avx512f.c  sharp_core_fma.c  sharp_core_fma4.c  sharp_core_inc.c  sharp_core_inc0.c  sharp_core_inc2.c  sharp_core_inchelper.c  sharp_cxx.h  sharp_geomhelpers.c  sharp_geomhelpers.h  sharp_internal.h  sharp_legendre_roots.c  sharp_lowlevel.h  sharp_mpi.c  sharp_mpi.h  sharp_testsuite.c  sharp_utils.c  sharp_vecsupport.h  sharp_vecutil.h  sharp_ylmgen_c.c  sharp_ylmgen_c.h
libsharp2/: libsharp2.dox  pocketfft.c  sharp.c  sharp_core.c  sharp_core_inc.c  sharp_geomhelpers.c  sharp_internal.h  sharp_legendre_roots.c  sharp_legendre_roots.h  sharp_utils.c  sharp_utils.h  sharp_vecsupport.h  sharp_ylmgen_c.c
python/: pysharp.cc  setup.py
test/: memusage.c  memusage.h  sharp2_testsuite.c  sharp_testsuite.c
